# Student-Performance

./: main.py  pyproject.toml  setup.py
notebooks/: EDA-Student-Performance.ipynb
src/: exception.py  logger.py
